Fixed up footer alignment
made the footer centre and changed the font size in large screen version

--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,6 @@ vertical-align: middle;
     outline-style: dotted;
     outline-width: thin;
     display: flex;
-    justify-content:stretch;
     align-items: center;
 }
 #bio-words {
@@ -298,20 +297,15 @@ form {
     width: 100px;
 }
 footer {
-    width: 50%;
     border: 2px solid #FA4224;
-    padding-left: 25%;
-    padding-right: 25%;
-    align-content:stretch
+    display: flex;
+    padding-left: 672.5px;
+    width: fit-content;
 }
 h4 {
     margin: 0px;
-    display: flexbox;
-    flex-wrap: wrap;
-    width: 100%;
-    text-align: center;
-}
-#contact-arrow {
-margin-top: 5px;
+    display: flex;
+    align-content: center;
+    font-size: 20px;
 }
 remove the span - apply display flex in css to the H4 element - class or "footer h4" to reference
